# sentinel-rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/agents/: critic.md  evaluator.md  explorer.md  generator.md  planner.md
.playwright-mcp/: page-2026-05-05T00-47-41-411Z.yml  page-2026-05-05T00-48-19-449Z.yml  page-2026-05-05T00-49-53-593Z.yml  page-2026-05-05T00-50-18-219Z.yml  page-2026-05-05T00-50-38-149Z.yml  page-2026-05-05T00-55-03-655Z.yml  page-2026-05-05T00-55-12-681Z.yml  page-2026-05-05T00-55-20-147Z.yml  page-2026-05-05T01-35-05-828Z.yml  page-2026-05-05T01-35-14-097Z.yml  page-2026-05-05T01-35-23-563Z.yml  page-2026-05-05T01-35-35-192Z.yml  page-2026-05-05T01-35-53-648Z.yml
config/loki/: loki.yml
config/nginx/: nginx.conf  nginx.dev.conf
config/postgres/: init.sql  pg_hba.conf
config/prometheus/: prometheus.yml
docs/: SETUP.md  architecture.md  deployment.md  requirements.md  security.md
scripts/: backup.sh  health-check.sh  restore.sh
services/api/: Dockerfile  pyproject.toml
services/api/src/: main.py
services/api/src/api/middleware/: audit_log.py  rate_limit.py  tenant_isolation.py
services/api/src/api/routes/: admin.py  auth.py  documents.py  health.py  qa.py  sync.py  tenants.py
services/api/src/audit/: hash_chain.py  logger.py
services/api/src/core/: chunker.py  config.py  prompt_templates.py  rag_pipeline.py  reranker.py
services/api/src/db/: base.py  session.py
services/api/src/models/: __init__.py  audit_log.py  document.py  llm_provider.py  qa_history.py  sync_config.py  tenant.py  user.py
services/api/src/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
services/api/src/security/: dlp_scanner.py  encryption.py  rbac.py  sensitivity_classifier.py
services/api/src/worker/: celery_app.py
services/api/src/worker/tasks/: audit_aggregator.py  ingestion.py  sync.py
services/api/tests/: conftest.py  test_dlp.py  test_hash_chain.py  test_health.py  test_integration.py  test_rbac.py
(+26 files in other folders)
