[project]
name = "sentinel-rag-api"
version = "0.1.0"
description = "Sentinel RAG Platform - API & Worker"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",

    # Redis
    "redis[hiredis]>=5.0,<6",

    # Vector DB
    "qdrant-client>=1.11,<2",

    # Object storage
    "minio>=7.2,<8",

    # Task queue
    "celery[redis]>=5.4,<6",

    # LLM providers
    "anthropic>=0.39,<1",
    "openai>=1.50,<2",
    "google-generativeai>=0.8,<1",
    "httpx>=0.27,<1",

    # Document processing
    "unstructured[all-docs]>=0.15,<1",
    "langchain-text-splitters>=0.3,<1",
    "python-magic>=0.4,<1",
    "pytesseract>=0.3,<1",

    # Auth
    "python-jose[cryptography]>=3.3,<4",
    "casbin>=1.36,<2",
    "casbin-sqlalchemy-adapter>=1.0,<2",

    # Security
    "passlib[bcrypt]>=1.7,<2",
    "cryptography>=43,<44",

    # Config & validation
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",

    # Observability
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.21,<1",
    "structlog>=24.4,<25",

    # Utilities
    "watchdog>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "mypy>=1.11,<2",
    "ruff>=0.7,<1",
    "factory-boy>=3.3,<4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests requiring a running server"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
